comment out and add infomation

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+        	<h3><a id="accounts" href="#account" aria-hidden="true"></a>Accounts</h3>
+        		<ul>
+        			<li><a href="https://twitter.com/mozuku169">Twitter: @mozuku169</a></li>
+        		</ul>
+        	<h3><a id="blog" href="#blog" aria-hidden="true"></a>Blog</h3>
+        		<ul>
+        			<li><a href="http://mozuku169.hatenablog.com/">ふぇぇぶろぐ(hatena blog)</a></li>
+        		</ul>
+<!--
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -59,6 +68,7 @@ $ git checkout gh-pages
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+-->
         </section>
 
         <aside id="sidebar">
@@ -69,6 +79,5 @@ $ git checkout gh-pages
       </div>
     </div>
 
-  
   </body>
 </html>
